--- a/pom.xml
+++ b/pom.xml
@@ -144,8 +144,12 @@
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
         </dependency>
-
-
+		<!-- fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
     </dependencies>
 
 
