--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
         </dependency>
         <!--3.servlet web相关 -->
         <dependency>
+		  <groupId>servletapi</groupId>
+		  <artifactId>servletapi</artifactId>
+		  <version>2.3</version>
+		  <type>pom</type>
+		</dependency>
+        <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
@@ -151,6 +157,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
+        <dependency>
+		  <groupId>commons-fileupload</groupId>
+		  <artifactId>commons-fileupload</artifactId>
+		  <version>1.3.2</version>
+		</dependency>
         <!--4.4springTest -->
         <dependency>
             <groupId>org.springframework</groupId>
