--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,14 +22,14 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
+    <!-- <filter>
         <filter-name>cros</filter-name>
         <filter-class>cn.clothes.controller.LoginController</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>cros</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping> -->
 
 
 
@@ -45,7 +45,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>user-dispacher</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
 
