--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
         </dependency>
         <!--3.servlet web相关 -->
         <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+        <dependency>
 		  <groupId>servletapi</groupId>
 		  <artifactId>servletapi</artifactId>
 		  <version>2.3</version>
@@ -102,6 +108,7 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
